--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             color: green;
         }
         #as {
-            color: red;
+            color: blue;
         }
     </style>
 </head>
