updating files to new branch

--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
 </head>
 
 <body>
-    <h1 id="as">sdfgh <span id="ts">sdfghjklkjhgf</span>jklkjhgf</h1>
-    <p id="as ts">sdfghjdfhsnkjgvbzfjhdbfdchangeddddddddddddklkjhgf</p>
-    <p>sdfghjklkjhgf</p>
-    <p>second branch</p>
+    <h1 id="as">sdfgh <span id="ts">sdfghjklkjhgf</span>jklkjhgf</h1>git
 </body>
 
 </html>
